--- a/layouts/partials/blog-card.html
+++ b/layouts/partials/blog-card.html
@@ -2,7 +2,7 @@
 <a href="{{ .Permalink }}">
   {{ if .Params.thumbnail }}
   <div class="relative">
-    <img src="{{ .Params.thumbnail }}" alt="{{ .Params.title }}" class="rounded-lg shadow-sm w-full h-52 object-cover" />
+    <img src="{{ .Site.BaseURL }}{{ .Params.thumbnail }}" alt="{{ .Params.title }}" class="rounded-lg shadow-sm w-full h-52 object-cover" />
   </div>
   {{ end }}
   <div class="my-2 text-xl font-semibold">{{ .Params.title }}</div>
