--- a/layouts/partials/carousel.html
+++ b/layouts/partials/carousel.html
@@ -6,7 +6,7 @@
     <ul>
         {{ range $index, $slide := index .context.Site.Data.carousel .img_dir }}
 
-          <li id="c10_slide{{ add $index 1}}" style='min-width: calc(100%/{{ $.context.Scratch.Get "items" }}); padding-bottom: {{ $.context.Scratch.Get "height" }}{{ $.context.Scratch.Get "unit" }};'><img src="{{ $slide.image }}" alt="" /><div><div>{{ $slide.content_html }}</div></div></li>
+          <li id="c10_slide{{ add $index 1}}" style='min-width: calc(100%/{{ $.context.Scratch.Get "items" }}); padding-bottom: {{ $.context.Scratch.Get "height" }}{{ $.context.Scratch.Get "unit" }};'><img src="{{ .Site.BaseURL }}{{ $slide.image }}" alt="" /><div><div>{{ $slide.content_html }}</div></div></li>
         {{ end }}
     </ul>
     <ol>
